test/compile_fail/frozen_map_empty_keys.cpp
#include "frozenchars/frozen_map.hpp"

auto empty_map = frozenchars::frozen_map<int>{};
